finish mobile styling and logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 </head>
 <body>
     <header>
-
+        <a href="index.html">
+            <div class="header-logo">
+                
+                    <img src="./img/leaf-white.png" class="header-logo_img" />
+                    <p class="header-logo_text">RR</p>
+                
+            </div>
+        </a>
         <button class="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
         </button>
@@ -25,10 +32,14 @@
         </nav>
     </header>
     <div class="container">
-    <div class="header-logo">
-        <img alt="Right Recipe blog logo" src="./img/logo-img.png"/>
+    <div class="hero-logo">
+        <!-- <h1>The Right Recipe</h1>
+        <p class="hero-subtitle">at Crabtree Farms</p> -->
+        <img alt="Right Recipe Logo" class="hero-logo_text" src="./img/RR_logo-removebg-preview.png" />
+        <img class="hero-logo_img" alt="leaf logo background" src="./img/leafimg.png"/>
     </div>
 
+    <hr>
     <div class="img-tiles">
         <a href=""><div class="img-tile">
             <img class="img-tile_img" src="./img/RR_cinnamon-scones.webp"/>
