--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
             <div class=" sidebar">
                 <div class="sidebar-container about-me">
                     <img src="./img/Margaret.jpg">
-                    <h4>About Me</h4>
+                    <div class="about-me_text">
+                       <h4>About Me</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, nisi omnis! Facilis dicta provident odit dolores id, nam voluptates fugiat repudiandae deserunt libero, quisquam repellat corrupti impedit iure beatae a nisi, nobis et maiores deleniti eaque perspiciatis doloremque!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis autem, laboriosam officiis sunt fuga dicta.</p>
-                    <a href="#">read more -></a>
+                    <a href="#">read more -></a> 
+                    </div>
                 </div>
             </div>
         </aside>
