adding responsive elements and media queries

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
             <div class="img-tile">
                 <img class="img-tile_img" src="./img/RR_miso-carrot-salad.webp"/>
-                <p class="img-tile_text">lunch + snacks</p>
+                <p class="img-tile_text">lunch</p>
             </div>
             <div class="img-tile">
                 <img class="img-tile_img" src="./img/RR_cilantro-chicken-to-post.webp"/>
